package com.example.sims.model;

public enum Role {
    ADMIN,
    STUDENT,
    SUPERVISOR,
    FACULTY
}
